# mol-search-sparql-service

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yml  compounds.tsv  fetch_rhea.rq  mol-search-sparql-service  pyproject.toml
.github/: deploy.sh  release.sh
.github/workflows/: deploy.yml  test.yml
slides/: index.html  package.json  vite.config.ts
slides/public/: slides.md
src/mol_search_sparql_service/: gen_docs.py  main.py  rdkit_fingerprints.py  sparql_service.py
tests/: test_basic.py  test_cli.py  test_engine.py  test_mcp.py  test_parameters.py  test_sparql.py
