[project]
name = "mol_search_sparql_service"
description = "A SPARQL service for finding similar chemicals and substructures using molecular fingerprints."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dynamic = ["version"]
authors = [
    { name = "Marco Pagni", email = "marco.pagni@sib.swiss" },
]
maintainers = [
    { name = "Marco Pagni", email = "marco.pagni@sib.swiss" },
]
keywords = [
    "SPARQL",
    "RDKit",
    "chemistry",
    "molecular search",
]
dependencies = [
    "mcp>=1.26.0",
    "rdflib>=7.6.0",
    "rdflib-endpoint>=0.6.1",
    "rdkit>=2025.9.4",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
mol-search-sparql-service = "mol_search_sparql_service.main:main"

[project.urls]
Homepage = "https://github.com/sib-swiss/mol-search-sparql-service"
Documentation = "https://github.com/sib-swiss/mol-search-sparql-service"
History = "https://github.com/sib-swiss/mol-search-sparql-service/releases"
Tracker = "https://github.com/sib-swiss/mol-search-sparql-service/issues"
Source = "https://github.com/sib-swiss/mol-search-sparql-service"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/mol_search_sparql_service/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]